new URI instead of new URL, mangadex, vk.